Settings: Long press power button to toggle flashlight [2/2]
* Animation by Sahul Krishnan, remade to lottie by Andrew Fluck
* Adapt to Android 11 by @mickaelmendes50

Change-Id: Ibdce3644ba1e794120a268064843349b9fa432a9
Signed-off-by: Mesquita <mickaelmendes50@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -129,4 +129,10 @@
         android:summary="@string/offscreen_gesture_summary"
         android:fragment="com.android.settings.gestures.OffscreenGestureSettings" />
 
+    <Preference
+        android:key="power_button_torch_summary"
+        android:title="@string/power_button_torch_title"
+        android:fragment="com.android.settings.gestures.PowerButtonTorchSettings"
+        settings:controller="com.android.settings.gestures.PowerButtonTorchGesturePreferenceController" />
+
 </PreferenceScreen>
