Settings: Add toggle for statusbar DT2S [2/2]
Change-Id: Ife8722d46d0d67e493e40244c8635398705de2b7

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -189,4 +189,8 @@
     <string name="power_button_torch_title">Quick torch</string>
     <string name="power_button_torch_summary">When the screen is off, long-pressing power button will enable torch</string>
 
+    <!-- DT2S on statusbar-->
+    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
+    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to turn off screen</string>
+
 </resources>
